# NSU_computer_and_peripherals

./: .gitignore  README.md  connect.sh
lab1/: lab1  rez6.txt
lab1/c/: CMakeLists.txt  compile.sh  g_lab1_3.s  lab1  lab1_0  lab1_0.s  lab1_0_.s  lab1_0_a.s  lab1_0_f  lab1_0_t  lab1_3  lab1_3_a.s  main.c  rez1.txt  rez2.txt  test.sh
lab1/c/results/: rez.txt  rez1.txt  rez2.txt  rez3.txt  rez4.txt  rez5.txt
lab1/cpp/: CMakeLists.txt  compile.sh  lab1  main.cpp  rez1.txt  test.sh
lab1/report/: lab1.odt  lab1_evm_tmp.odt
lab2/c/: g_lab1_0.s  g_lab1_0_1.s  g_lab1_3.s  g_lab1_3_1.s
lab2/report/: .~lock.lab 2.odt#  lab 2.odt
lab3/libusb/cpp/: CMakeLists.txt  main.cpp
lab3/opencv/c/: CMakeLists.txt  main.c
lab3/opencv/cpp/: CMakeLists.txt  main.cpp
lab3/report/: .~lock.Без имени 1.odt#  Без имени 1.odt
lab4/blas/: CMakeLists.txt  main.cpp
lab4/default/: CMakeLists.txt  default.cpp  main.cpp
lab4/manual/: CMakeLists.txt  main.cpp  main128.cpp
lab4/report/: .~lock.Без имени 1.odt#  Без имени 1.odt
lab4/test/: CMakeLists.txt  test.cpp
lab5/cpp/: CMakeLists.txt  direct.txt  main.cpp  random.txt  reverse.txt
lab5/report/: .~lock.Без имени 1.odt#  Без имени 1.odt
lab5/test/: CMakeLists.txt  main.cpp
lab6/: Без имени 1.odt
lab6/cpp/: CMakeLists.txt  main.cpp  other_main.cpp  out.txt  out_new.txt
